refs #59725 @0.15h: add token prefix and adjustment of some formatting